--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -131,8 +131,8 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Fantasque Sans Mono:pixelsize=12;3"
-font-1 = "Iosevka Nerd Font:pixelsize=14;4"
+font-0 = "Fantasque Sans Mono:style=Regular:pixelsize=12;3"
+font-1 = "Iosevka,Iosevka Nerd Font;style=Regular,Book:pixelsize=20;4"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
