--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,10 +1,13 @@
-;; ┌────────────────────────────────────────────────────────────┐
-;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
-;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
-;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
-;; └────────────────────────────────────────────────────────────┘
+;; ┌──────────────────────────────────────────────────────────────────────────────-----┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█░█░█▀▀░█▀▀░█▀▄░░░█▄█░█▀█░█▀▄░█░█░█░░░█▀▀░█▀▀ │
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░█░▀▀█░█▀▀░█▀▄░░░█░█░█░█░█░█░█░█░█░░░█▀▀░▀▀█ │
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀▀▀ │
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; │░Created░By░Erik░Dubois░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └──────────────────────────────────────────────────────────────────────────────-----┘
+
 ;; https://github.com/adi1090x/polybar-themes
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 ;; Global WM Settings
@@ -32,12 +35,12 @@ include-file = ~/.config/leftwm/themes/current/polybar/user_modules.ini
 
 ;; Bar Settings
 
-[bar/mainbar0]
+[bar/barbase]
 ; Use either of the following command to list available outputs:
 ; If unspecified, the application will pick the first one it finds.
 ; $ polybar -m | cut -d ':' -f 1
 ; $ xrandr -q | grep " connected" | cut -d ' ' -f1
-monitor =
+monitor = ${env:monitor}
 
 ; Use the specified monitor as a fallback if the main one is not found.
 monitor-fallback =
@@ -60,6 +63,7 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
+;width = ${env:width}
 width = 98%
 height = 36
 
@@ -114,6 +118,8 @@ border-color = ${color.background}
 ; Individual side values can be defined using:
 ;   padding-{left,right}
 padding = 0
+;padding-left = 2
+;padding-right = 2
 
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
@@ -131,17 +137,85 @@ module-margin-right = 0
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Fantasque Sans Mono:style=Regular:pixelsize=12;3"
-font-1 = "Iosevka,Iosevka Nerd Font;style=Regular,Book:pixelsize=20;4"
+font-0 = "Material\-Design\-Iconic\-Font:style=Design-Iconic-Font:size=14;4"
+font-1 = "Fantasque Sans Mono Nerd:style=Bold:pixelsize=12;3"
+font-2 = "Iosevka,Iosevka Nerd Font;style=Regular,Book:pixelsize=20;4"
+#font-3 = "SauceCodePro Nerd Font:size=14:weight=bold;1"
 
-; Modules are added to one of the available blocks
-;   modules-left = cpu ram
-;   modules-center = xwindow xbacklight
-;   modules-right = ipc clock
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-modules-left = launcher workspaces discord telegram
-modules-center =
-modules-right = updates pulseaudio date sysmenu
+;; module choices
+;;
+;; launcher launcher1 launcher2 launcher3
+;;
+;; alsa backlight battery cpu date filesystem memory mpd wired-network
+;; wireless-network network pulseaudio temperature keyboard title workspaces
+;;
+;; updates arch-updates aur-updates kernel color-switch discord telegram
+;; google github reddit gmail twitter
+;; term files browser settings
+;;
+;; sysmenu sysmenu1 sysmenu2
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+;; testing
+;; modules-center = cpu date kernel
+
+modules-center = discord telegram screenshot
+modules-right = updates alsa battery network date sysmenu
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/mainbar0]
+inherit = bar/barbase
+modules-left = launcher workspace0
+tray-position = none
+tray-detached = false
+tray-maxsize = 14
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 0
+tray-scale = 1.0
+tray-background = ${color.-background}
+
+[module/workspace0]
+type = custom/script
+exec = leftwm-state -w 0 -t $SCRIPTPATH/template.liquid
+tail = true
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/mainbar1]
+inherit = bar/barbase
+modules-left = launcher workspace0 term files browser settings
+
+[module/workspace1]
+type = custom/script
+exec = leftwm-state -w 1 -t $SCRIPTPATH/template.liquid
+tail = true
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/mainbar2]
+inherit = bar/barbase
+modules-left = workspace2
+
+[module/workspace2]
+type = custom/script
+exec = leftwm-state -w 2 -t $SCRIPTPATH/template.liquid
+tail = true
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[bar/mainbar3]
+inherit = bar/barbase
+modules-left = workspace3
+
+[module/workspace3]
+type = custom/script
+exec = leftwm-state -w 3 -t $SCRIPTPATH/template.liquid
+tail = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -232,20 +306,6 @@ double-click-right =
 ; - ns-resize : Up and down arrows, can be used to indicate scrolling
 cursor-click =
 cursor-scroll =
-
-;; WM Workspace Specific
-
-; bspwm
-;;scroll-up = bspwm-desknext
-;;scroll-down = bspwm-deskprev
-;;scroll-up = bspc desktop -f prev.local
-;;scroll-down = bspc desktop -f next.local
-
-;i3
-;;scroll-up = i3wm-wsnext
-;;scroll-down = i3wm-wsprev
-;;scroll-up = i3-msg workspace next_on_output
-;;scroll-down = i3-msg workspace prev_on_output
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
