--- a/polybar/colors.ini
+++ b/polybar/colors.ini
@@ -1,9 +1,12 @@
-;; ┌────────────────────────────────────────────────────────────┐
-;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█░░░█▀█░█▀▄░█▀▀│
-;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░░░█░█░█▀▄░▀▀█│
-;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀▀▀░▀▀▀░▀░▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░│
-;; └────────────────────────────────────────────────────────────┘
+;; ┌──────────────────────────────────────────────────────────────────────────────-----┐
+;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█░█░█▀▀░█▀▀░█▀▄░░░█▄█░█▀█░█▀▄░█░█░█░░░█▀▀░█▀▀ │
+;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░█░▀▀█░█▀▀░█▀▄░░░█░█░█░█░█░█░█░█░█░░░█▀▀░▀▀█ │
+;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀▀▀ │
+;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; │░Created░By░Erik░Dubois░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; └──────────────────────────────────────────────────────────────────────────────-----┘
+
+;; https://github.com/adi1090x/polybar-themes
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -12,18 +15,18 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #FFFFFF
+background = #1F1F1F
 foreground = #FFFFFF
-foreground-alt = #656565
+foreground-alt = #8F8F8F
 
 ;; shades
-shade1 = #263238
-shade2 = #37474F
-shade3 = #455A64
-shade4 = #546E7A
-shade5 = #607D8B
-shade6 = #78909C
-shade7 = #90A4AE
-shade8 = #B0BEC5
+shade1 = #01579B
+shade2 = #0277BD
+shade3 = #0288D1
+shade4 = #039BE5
+shade5 = #03A9F4
+shade6 = #29B6F6
+shade7 = #4FC3F7
+shade8 = #81D4FA
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
