--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -3,7 +3,131 @@
 ;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░█░▀▀█░█▀▀░█▀▄░░░█░█░█░█░█░█░█░█░█░░░█▀▀░▀▀█ │
 ;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀▀▀░▀░▀░░░▀░▀░▀▀▀░▀▀░░▀▀▀░▀▀▀░▀▀▀░▀▀▀ │
 ;; │░Created░By░Aditya░Shakya░@adi1090x░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
+;; │░Created░By░Erik░Dubois░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░│
 ;; └──────────────────────────────────────────────────────────────────────────────-----┘
+
+;; https://github.com/adi1090x/polybar-themes
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/launcher]
+type = custom/text
+content = "  "
+
+; "content" has the same properties as "format-NAME"
+content-background = ${color.shade1}
+content-foreground = ${color.foreground}
+content-padding = 2
+
+; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
+click-left = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
+;;click-middle = ~/.config/leftwm/themes/current/polybar/scripts/launcher-full
+click-right = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
+
+; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
+;;scroll-up = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
+;;scroll-down = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/launcher1]
+type = custom/text
+content = 
+
+; "content" has the same properties as "format-NAME"
+content-background = ${color.primary}
+content-foreground = ${color.module-fg}
+content-padding = 2
+
+click-left = xfce4-appfinder
+click-middle = xfce4-appfinder
+click-right = rofi -show drun
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/launcher2]
+type = custom/menu
+
+; If true, <label-toggle> will be to the left of the menu items (default).
+; If false, it will be on the right of all the items.
+expand-right = true
+
+; "menu-LEVEL-N" has the same properties as "label-NAME" with
+; the additional "exec" property
+;
+; Available exec commands:
+;   menu-open-LEVEL
+;   menu-close
+; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
+menu-0-0 = Menu
+menu-0-0-exec = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
+menu-0-1 = Files
+menu-0-1-exec = thunar &
+menu-0-2 = Terminal
+menu-0-2-exec = alacritty &
+menu-0-3 = Browser
+menu-0-3-exec = firefox &
+
+; Available tags:
+;   <label-toggle> (default) - gets replaced with <label-(open|close)>
+;   <menu> (default)
+; Note that if you use <label-toggle> you must also include
+; the definition for <label-open>
+
+format = <label-toggle> <menu>
+format-background = ${color.primary}
+format-foreground = ${color.module-fg}
+format-padding = 2
+
+label-open = 
+label-close = 
+
+; Optional item separator
+; Default: none
+label-separator = " | "
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/launcher3]
+type = custom/menu
+
+; If true, <label-toggle> will be to the left of the menu items (default).
+; If false, it will be on the right of all the items.
+expand-right = true
+
+; "menu-LEVEL-N" has the same properties as "label-NAME" with
+; the additional "exec" property
+;
+; Available exec commands:
+;   menu-open-LEVEL
+;   menu-close
+; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
+menu-0-0 = Menu
+menu-0-0-exec = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
+menu-0-1 = Files
+menu-0-1-exec = thunar &
+menu-0-2 = Terminal
+menu-0-2-exec = alacritty &
+menu-0-3 = Browser
+menu-0-3-exec = firefox &
+
+; Available tags:
+;   <label-toggle> (default) - gets replaced with <label-(open|close)>
+;   <menu> (default)
+; Note that if you use <label-toggle> you must also include
+; the definition for <label-open>
+
+format = <label-toggle> <menu>
+format-background = ${color.shade1}
+format-foreground = ${color.foreground}
+format-padding = 2
+
+label-open = 
+label-close = 
+
+; Optional item separator
+; Default: none
+label-separator = " | "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -60,44 +184,44 @@ click-right = exo-open --launch TerminalEmulator &
 ;;scroll-up = echo scroll up %counter%
 ;;scroll-down = echo scroll down %counter%
 
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/arch-updates]
+type = custom/script
+exec = ~/.config/leftwm/themes/current/scripts/check-arch-updates.sh
+interval = 1000
+label = " Arch: %output%"
+format-foreground = ${colors.foreground}
+format-prefix = "  "
+format-prefix-foreground = ${colors.foreground}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/launcher]
-type = custom/text
-content = 
-
-; "content" has the same properties as "format-NAME"
-content-background = ${color.shade1}
-content-foreground = ${color.foreground}
-content-padding = 2
-
-; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
-click-left = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
-;;click-middle = ~/.config/leftwm/themes/current/polybar/scripts/launcher-full
-click-right = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
-
-; "scroll-(up|down)" will be executed using "/usr/bin/env sh -c $COMMAND"
-;;scroll-up = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
-;;scroll-down = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
+[module/aur-updates]
+type = custom/script
+exec = ~/.config/leftwm/themes/current/scripts/check-aur-updates.sh
+interval = 1000
+label = " Aur: %output%"
+format-foreground = ${colors.foreground}
+format-prefix = "  "
+format-prefix-foreground = ${colors.foreground}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/sysmenu]
-type = custom/text
-content = " 襤 "
+[module/kernel]
+type = custom/script
+exec = uname -r
+tail = false
+interval = 1024
 
-content-background = ${color.shade2}
-content-foreground = ${color.foreground}
-content-padding = 2
-
-click-left = ~/.config/leftwm/themes/current/polybar/scripts/powermenu.sh &
+format-foreground = ${colors.foreground}
+format-prefix = " ﰆ "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/color-switch]
 type = custom/text
-content = 
+content = 
 
 content-background = ${color.background}
 content-foreground = ${color.shade8}
@@ -112,31 +236,6 @@ type = custom/text
 content-foreground = ${color.foreground-alt}
 content-padding = 2
 
-[module/google]
-inherit = module/links
-content = 
-click-left = exo-open https://www.google.com/ &
-
-[module/github]
-inherit = module/links
-content = 
-click-left = exo-open https://www.github.com/ &
-
-[module/reddit]
-inherit = module/links
-content = 
-click-left = exo-open https://www.reddit.com/ &
-
-[module/gmail]
-inherit = module/links
-content = 
-click-left = exo-open https://mail.google.com/ &
-
-[module/twitter]
-inherit = module/links
-content = 
-click-left = exo-open https://www.twitter.com/ &
-
 [module/discord]
 inherit = module/links
 content = ﱲ
@@ -144,12 +243,102 @@ click-left = discord &
 
 [module/telegram]
 inherit = module/links
-content = 
+content = 
 click-left = telegram-desktop &
+
+[module/google]
+inherit = module/links
+content = 
+click-left = exo-open https://www.google.com/ &
+
+[module/github]
+inherit = module/links
+content = 
+click-left = exo-open https://www.github.com/ &
+
+[module/reddit]
+inherit = module/links
+content = 
+click-left = exo-open https://www.reddit.com/ &
+
+[module/gmail]
+inherit = module/links
+content = 
+click-left = exo-open https://mail.google.com/ &
+
+[module/twitter]
+inherit = module/links
+content = 
+click-left = exo-open https://www.twitter.com/ &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/powermenu]
+[module/apps]
+type = custom/text
+content-foreground = ${color.foreground-alt}
+content-padding = 1
+
+[module/term]
+inherit = module/apps
+content = 
+click-left = alacritty &
+click-middle = xfce4-terminal &
+click-right = urxvt &
+
+[module/files]
+inherit = module/apps
+content = 
+click-left = thunar &
+click-right = urxvt -e ranger &
+
+[module/browser]
+inherit = module/apps
+content = 
+click-left = firefox &
+click-right = chromium &
+
+[module/settings]
+inherit = module/apps
+content = 
+click-left = xfce4-settings-manager &
+click-right = lxappearance &
+
+[module/screenshot]
+inherit = module/apps
+content = ﬆ
+click-left = flameshot launcher &
+;; click-right = gnome-screenshot -i &
+click-right = xfce4-screenshooter &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/sysmenu]
+type = custom/text
+content = " 襤 "
+
+content-background = ${color.shade2}
+content-foreground = ${color.foreground}
+content-padding = 2
+
+click-left = ~/.config/leftwm/themes/current/polybar/scripts/powermenu.sh &
+click-right = ~/.config/leftwm/themes/current/polybar/scripts/powermenu.sh &
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/sysmenu1]
+type = custom/text
+content = 
+
+content-background = ${color.primary}
+content-foreground = ${color.module-fg}
+content-padding = 2
+
+click-left = arcolinux-logout
+click-right = arcolinux-logout
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/sysmenu2]
 type = custom/menu
 
 ; If true, <label-toggle> will be to the left of the menu items (default).
@@ -163,20 +352,13 @@ expand-right = true
 ;   menu-open-LEVEL
 ;   menu-close
 ; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = shutdown
-menu-0-1-exec = menu-open-2
+menu-0-0 = logout
+menu-0-0-exec = pkill -KILL -u $USER
+menu-0-1 = reboot
+menu-0-1-exec = systemctl reboot
+menu-0-2 = shutdown
+menu-0-2-exec = systemctl poweroff
 
-menu-1-0 = back
-menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
-menu-1-1-exec = systemctl reboot
-
-menu-2-0 = shutdown
-menu-2-0-exec = systemctl poweroff
-menu-2-1 = back
-menu-2-1-exec = menu-open-0
 
 ; Available tags:
 ;   <label-toggle> (default) - gets replaced with <label-(open|close)>
@@ -190,53 +372,6 @@ format-foreground = ${color.foreground}
 format-padding = 2
 
 label-open = 
-label-close = 
-
-; Optional item separator
-; Default: none
-label-separator = " | "
-
-;;label-open-foreground = ${color.foreground}
-;;label-close-foreground = ${color.background}
-;;label-separator-foreground = ${color.background}
-
-;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-[module/menu]
-type = custom/menu
-
-; If true, <label-toggle> will be to the left of the menu items (default).
-; If false, it will be on the right of all the items.
-expand-right = true
-
-; "menu-LEVEL-N" has the same properties as "label-NAME" with
-; the additional "exec" property
-;
-; Available exec commands:
-;   menu-open-LEVEL
-;   menu-close
-; Other commands will be executed using "/usr/bin/env sh -c $COMMAND"
-menu-0-0 = Menu
-menu-0-0-exec = ~/.config/leftwm/themes/current/polybar/scripts/launcher.sh &
-menu-0-1 = Files
-menu-0-1-exec = thunar &
-menu-0-2 = Terminal
-menu-0-2-exec = alacritty &
-menu-0-3 = Browser
-menu-0-3-exec = firefox &
-
-; Available tags:
-;   <label-toggle> (default) - gets replaced with <label-(open|close)>
-;   <menu> (default)
-; Note that if you use <label-toggle> you must also include
-; the definition for <label-open>
-
-format = <label-toggle> <menu>
-format-background = ${color.shade1}
-format-foreground = ${color.foreground}
-format-padding = 2
-
-label-open = 
 label-close = 
 
 ; Optional item separator
