--- a/theme.toml
+++ b/theme.toml
@@ -1,6 +1,6 @@
 border_width = 2
 margin = [4, 4]
 
-default_border_color = "#263238"
-floating_border_color = "#263238"
-focused_border_color = "#607D8B"
+default_border_color = "#555555"
+floating_border_color = "#999999"
+focused_border_color = "#03A9F4"
