--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -162,7 +162,7 @@ font-2 = "Iosevka,Iosevka Nerd Font;style=Regular,Book:pixelsize=20;4"
 ;; testing
 ;; modules-center = cpu date kernel
 
-modules-center = discord telegram screenshot
+modules-center = discord telegram screenshot pamac
 modules-right = updates alsa battery network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
