--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -228,6 +228,7 @@ content-foreground = ${color.shade8}
 content-padding = 2
 
 click-left = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
+click-right = ~/.config/leftwm/themes/current/polybar/scripts/color-switch.sh &
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -271,6 +272,11 @@ inherit = module/links
 content = 
 click-left = exo-open https://www.twitter.com/ &
 
+[module/pamac]
+inherit = module/links
+content = ﳺ
+click-left = pamac-manager &
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/apps]
@@ -306,7 +312,7 @@ click-right = lxappearance &
 [module/screenshot]
 inherit = module/apps
 content = ﬆ
-click-left = flameshot launcher &
+click-left = flameshot gui &
 ;; click-right = gnome-screenshot -i &
 click-right = xfce4-screenshooter &
 
