--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -349,6 +349,53 @@ label-unmounted = " %mountpoint%: not mounted"
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
+[module/keyboard]
+type = internal/xkeyboard
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
+; Available tags:
+;   <label-layout> (default)
+;   <label-indicator> (default)
+format = <label-layout> <label-indicator>
+format-prefix = 
+format-background = ${color.shade4}
+format-padding = 2
+
+; Available tokens:
+;   %layout%
+;   %name%
+;   %number%
+; Default: %layout%
+label-layout = " %layout%"
+
+; Available tokens:
+;   %name%
+; Default: %name%
+label-indicator-on = %name%
+label-indicator-on-foreground = ${color.foreground}
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/load-average]
+type = custom/script
+exec = uptime | grep -ohe 'load average[s:][: ].*' | awk '{ print $3" "$4" "$5"," }' | sed 's/,//g'
+interval = 100
+
+;HOW TO SET IT MINIMAL 10 CHARACTERS - HIDDEN BEHIND SYSTEM ICONS
+;label = %output%
+label = %output:10%
+
+format-foreground = ${color.foreground}
+format-background = ${color.background}
+format-prefix = "  "
+;format-prefix-foreground = #62FF00
+;format-underline = #62FF00
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
 [module/memory]
 type = internal/memory
 
@@ -400,6 +447,36 @@ label = " %mb_used%"
 ;;ramp-free-0 = ${memory.free0}
 ;;ramp-free-1 = ${memory.free1}
 ;;ramp-free-2 = ${memory.free2}
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/memory1]
+;https://github.com/jaagr/polybar/wiki/Module:-memory
+type = internal/memory
+interval = 1
+; Available tokens:
+;   %percentage_used% (default)
+;   %percentage_free%
+;   %gb_used%
+;   %gb_free%
+;   %gb_total%
+;   %mb_used%
+;   %mb_free%
+;   %mb_total%
+label = %percentage_used%%
+bar-used-indicator =
+bar-used-width = 10
+bar-used-foreground-0 = ${color.primary}
+bar-used-fill = 
+bar-used-empty = 
+bar-used-empty-foreground = #ffffff
+
+format = <label> <bar-used>
+;format-prefix = "  "
+;format-prefix-foreground = #3384d0
+;format-underline = #3384d0
+format-foreground = ${color.foreground}
+format-background = ${color.background}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -499,15 +576,6 @@ toggle-off-foreground = ${color.background}
 ;;bar-progress-empty = ─
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
-; If you use both a wired and a wireless network, just add 2 module definitions. For example
-[module/wired-network]
-type = internal/network
-interface = enp4s0
-
-[module/wireless-network]
-type = internal/network
-interface = wlp3s0
 
 ; Normal Module
 [module/network]
@@ -720,33 +788,16 @@ ramp-4 = 
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-[module/keyboard]
-type = internal/xkeyboard
-
-; List of indicators to ignore
-blacklist-0 = num lock
-blacklist-1 = scroll lock
-
-; Available tags:
-;   <label-layout> (default)
-;   <label-indicator> (default)
-format = <label-layout> <label-indicator>
-format-prefix = 
-format-background = ${color.shade4}
-format-padding = 2
-
-; Available tokens:
-;   %layout%
-;   %name%
-;   %number%
-; Default: %layout%
-label-layout = " %layout%"
-
-; Available tokens:
-;   %name%
-; Default: %name%
-label-indicator-on = %name%
-label-indicator-on-foreground = ${color.foreground}
+[module/temperature1]
+type = custom/script
+exec = ~/.config/leftwm/themes/current/scripts/tempcores.sh
+interval = 2
+format-padding = 1
+format-foreground = ${color.foreground}
+format-background = ${color.background}
+;format-underline = #C1B93E
+;format-prefix-foreground = #C1B93E
+label =  %output:0:150%
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -768,6 +819,19 @@ label-maxlen = 30
 
 ; Used instead of label when there is no window title
 ;;label-empty = Arch Linux
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+; If you use both a wired and a wireless network, just add 2 module definitions. For example
+[module/wired-network]
+type = internal/network
+interface = eth0
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/wireless-network]
+type = internal/network
+interface = wlp3s0
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
