--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -191,9 +191,9 @@ type = custom/script
 exec = ~/.config/leftwm/themes/current/scripts/check-arch-updates.sh
 interval = 1000
 label = " Arch: %output%"
-format-foreground = ${colors.foreground}
+format-foreground = ${color.foreground}
 format-prefix = "  "
-format-prefix-foreground = ${colors.foreground}
+format-prefix-foreground = ${color.foreground}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -202,9 +202,9 @@ type = custom/script
 exec = ~/.config/leftwm/themes/current/scripts/check-aur-updates.sh
 interval = 1000
 label = " Aur: %output%"
-format-foreground = ${colors.foreground}
+format-foreground = ${color.foreground}
 format-prefix = "  "
-format-prefix-foreground = ${colors.foreground}
+format-prefix-foreground = ${color.foreground}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -214,7 +214,7 @@ exec = uname -r
 tail = false
 interval = 1024
 
-format-foreground = ${colors.foreground}
+format-foreground = ${color.foreground}
 format-prefix = " ﰆ "
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -241,11 +241,13 @@ content-padding = 2
 inherit = module/links
 content = ﱲ
 click-left = discord &
+click-right = killall Discord &
 
 [module/telegram]
 inherit = module/links
 content = 
 click-left = telegram-desktop &
+click-right = killall telegram-desktop &
 
 [module/google]
 inherit = module/links
