--- a/polybar/user_modules.ini
+++ b/polybar/user_modules.ini
@@ -341,8 +341,8 @@ content-background = ${color.primary}
 content-foreground = ${color.module-fg}
 content-padding = 2
 
-click-left = arcolinux-logout
-click-right = arcolinux-logout
+click-left = archlinux-logout
+click-right = archlinux-logout
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
